Fix an issue where the text of comment overflows

--- a/src/styles/components/_CardComments.scss
+++ b/src/styles/components/_CardComments.scss
@@ -34,6 +34,7 @@
     margin: 0;
     padding: 0.7rem 0.9rem;
     white-space: pre-line;
+    word-break: break-word;
 }
 
 .comment-action {
